--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-router": "^1.116.0",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-placeholder": "^3.8.0",
+    "@tiptap/react": "^3.8.0",
+    "@tiptap/starter-kit": "^3.8.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +51,7 @@
     "react": "^19.1.0",
     "react-day-picker": "9.6.6",
     "react-dom": "^19.1.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.55.0",
     "react-top-loading-bar": "^3.0.2",
     "recharts": "^2.15.2",
